--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SECTION_NAME: "timespent"
+          SHOW_PROFILE_VIEWS: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_OS: "False"
           SHOW_PROJECTS: "False"
