--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,30 @@
-name: Waka Readme
+name: WakaTime Project Stats
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '0 0 * * *'  # daily at midnight UTC
   workflow_dispatch:
+
 jobs:
-  update-readme:
-    name: Update Readme with Metrics
+  update-waka:
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SECTION_NAME: "timespent"
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_OS: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_SHORT_INFO: "False"
+
+          SECTION_NAME: "projectStats"
+          SHOW_PROJECTS: "True"
+          SHOW_TOTAL_CODE_TIME: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_LANGUAGE: "False"
+          SHOW_EDITORS: "False"
+          SHOW_OS: "False"
+          SHOW_LINES_OF_CODE: "False"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_COMMIT: "False"
+          LOCALE: "en"
+
+          COMMIT_MESSAGE: "Version 2.0 - Auto Commit - Update WakaTime Project Stats"
+          COMMIT_USERNAME: "Z's WakaTime Bot"
