--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,21 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
           SECTION_NAME: "projectStats"
           SHOW_PROJECTS: "True"
-          SHOW_TOTAL_CODE_TIME: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_LANGUAGE: "False"
-          SHOW_EDITORS: "False"
-          SHOW_OS: "False"
+          SHOW_UPDATED_DATE: "False"
           SHOW_LINES_OF_CODE: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LANGUAGE: "False"
+          SHOW_OS: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_EDITORS: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
           LOCALE: "en"
-
           COMMIT_MESSAGE: "Version 2.0 - Auto Commit - Update WakaTime Project Stats"
           COMMIT_USERNAME: "Z's WakaTime Bot"
