--- a/.github/workflows/zDailyTip.yml
+++ b/.github/workflows/zDailyTip.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "github-actions[bot]"
+          git config --global user.name "Z's Daily Tip Bot"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "Version 2.0 - Auto Commit - Update Daily Tip"
